# Full-Stack-Django5-TailwindCSS-HTMX

./: .gitignore  Dockerfile.sample  Dockerfile.sample_multi_stage  Dockerfile.uv  Dockerfile.uv_single  NOTES.md  README.md  compose.sample.yaml  deploy.sample.yml  docker-compose.sample.yml  entrypoint.sample.sh  pyproject.toml
01-Main-HTML-elements/: 1_html_fundamentals.html  4_links.html  5_images.html  6_lists.html
02-HTML-forms/: 1_text_input_fields.html  2_checkboxes_and_radio_buttons.html  3_text_areas.html  4_dropdowns.html  5_form_submissions.html  6_form_accessibility_and_autocomplete.html
03-Semantic-HTML/: 1.1_header_and_nav_elements.html  (+2 more)
8-Django-Course-Project/: .dockerignore  .env.example  Dockerfile  Dockerfile.example  Dockerfile.single  compose.yaml  docker-compose.yml  pyproject.toml  setup-django.sh  start-django.sh
8-Django-Course-Project/blog_app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
8-Django-Course-Project/blog_app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_article_options.py  0006_alter_userprofile_managers_alter_userprofile_email.py
8-Django-Course-Project/django_blog_project/: asgi.py  settings.py  urls.py  wsgi.py
8-Django-Course-Project/locale/uz/LC_MESSAGES/: django.po
8-Django-Course-Project/templates/blog_app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
8-Django-Course-Project/templates/blog_app/layouts/: base_form.html
(+36 files in other folders)
