[project]
name = "djangoblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "django>=6.0.3",
    "django-allauth[socialaccount]>=65.15.0",
    "django-environ>=0.13.0",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
]
